crates/plotnik-tests/tests/03-analyze/mutual_recursion/no_escape_via_capture.txt
A = (foo
  (bar) @cap
  (B)
)

B = (bar (A))
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:6:11
  |
3 |   (B)
  |    - references B (completing cycle)
...
6 | B = (bar (A))
  | ----------^--
  | |         |
  | |         references A
  | B is defined here
  |
help: add an alternative to `A` or `B` that does not reference any definition in this cycle
-------------------- SYMBOLS ---------------------
A
  B
    A (cycle)
B
  A
    B (cycle)
